--- a/php.ini
+++ b/php.ini
@@ -3,3 +3,4 @@ upload_max_filesize = 8M
 post_max_size = 8M
 set_time_limit = 0
 session.save_path = "store/sessions"
+error_reporting = E_ALL|E_STRICT
