--- a/php.ini
+++ b/php.ini
@@ -5,3 +5,4 @@ set_time_limit = 0
 session.save_path = "store/sessions"
 error_reporting = E_ALL|E_STRICT
 memory_limit = 16M
+date_default_timezone_set = " Europe/London"
