--- a/php.ini
+++ b/php.ini
@@ -1,8 +1,13 @@
-ignore_user_abort = 1
-upload_max_filesize = 8M
-post_max_size = 8M
-set_time_limit = 0
-session.save_path = "store/sessions"
-error_reporting = E_ALL|E_STRICT
-memory_limit = 16M
 date_default_timezone_set = " Europe/London"
+error_log = "store/errors/error.log"
+error_reporting = E_ALL|E_STRICT
+file_uploads = On
+ignore_user_abort = 1
+log_errors = On
+max_execution_time = 0
+max_input_time = 30
+memory_limit = 16M
+post_max_size = 8M
+session.save_path = "store/sessions"
+set_time_limit = 0
+upload_max_filesize = 8M
