--- a/sample.ini
+++ b/sample.ini
@@ -24,6 +24,8 @@ assets = "http://assets.example.com"
 customer = "http://customer.example.com"
 developer = "http://developer.example.com"
 hooks = "http://hooks.example.com"
+investors = "http://investors.example.com"
+kpi = "http://kpi.example.com"
 www = "http://www.example.com"
 
 [finance]
@@ -32,3 +34,4 @@ paypal = ""
 # Arbitrary configurations
 [config]
 key = ""
+live = ""
